Bug 125145 - kimagemap editor crashes when I start it
Summary: kimagemap editor crashes when I start it
Status: RESOLVED FIXED
Alias: None
Product: kimagemapeditor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Schaefer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-04-07 23:55 UTC by GML
Modified: 2007-01-08 10:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GML 2006-04-07 23:55:55 UTC
Version:           inconnu (using KDE 3.5.2, Debian Package 4:3.5.2-2 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15-1-686-smp

Since I've upgraded kimagemap to 3.5.2, kimagemap crashes. I deleted config file, but kimagemap crashes too.

The backtrace :

(no debugging symbols found)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1237715264 (LWP 25763)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xb6ba687a in qt_fillFontDef () from /usr/lib/libqt-mt.so.3
#7  0xb6baa8a2 in QFontDatabase::font () from /usr/lib/libqt-mt.so.3
#8  0x080950dd in MapsListView::staticMetaObject ()
#9  0x08097861 in MapsListView::staticMetaObject ()
#10 0x08061fdc in ?? ()
#11 0x0814c5f8 in ?? ()
#12 0x0814b328 in ?? ()
#13 0x080a0350 in typeinfo name for QPtrList<QRect> ()
#14 0x0813db00 in ?? ()
#15 0x080a0350 in typeinfo name for QPtrList<QRect> ()
#16 0xbfaa2650 in ?? ()
#17 0x0813f168 in ?? ()
#18 0xb785bff4 in ?? () from /usr/lib/libstdc++.so.6
#19 0x00000001 in ?? ()
#20 0xb7128dbc in ?? () from /usr/lib/libkdecore.so.4
#21 0xb733b000 in ?? ()
#22 0xb7fa4ff4 in ?? () from /lib/ld-linux.so.2
#23 0xb774cff4 in ?? () from /lib/tls/i686/cmov/libc.so.6
#24 0xb70a8408 in vtable for QPaintDevice () from /usr/lib/libqt-mt.so.3
#25 0x00000000 in ?? ()
Comment 1 Philip Rodrigues 2006-04-08 02:14:04 UTC
Just to be entirely sure that the problem isn't old config files, create a new user, and try to run kimagemapeditor with that user. If it still crashes, you'll need to provide a debugging-enabled backtrace
Comment 2 GML 2006-04-08 10:11:37 UTC
I've same bug with new user.
How I can activate debugging backtrace ?
Comment 3 Philip Rodrigues 2006-04-09 18:50:08 UTC
I think debian offers debug-enabled packages, called 'kdelibs-dbg' or something similar. You'd have to install all of those (instead of your current KDE packages) and try again.
Comment 4 GML 2006-04-09 20:40:24 UTC
I've installed kdelibs-dbg and kdewebdev-dbg.
The backtrace :
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1506326848 (LWP 18724)]
[KCrash handler]
#6  0xa6b7b87a in qt_fillFontDef () from /usr/lib/libqt-mt.so.3
#7  0xa6b7f8a2 in QFontDatabase::font () from /usr/lib/libqt-mt.so.3
#8  0x080950dd in KImageMapEditor::getBackgroundImage (this=0x814a528)
    at kimagemapeditor.cpp:860
#9  0x08097861 in KImageMapEditor (this=0x814a528, parentWidget=0x8149258, 
    parent=0x811a958, name=0x0) at kimagemapeditor.cpp:194
#10 0x08061fdc in KimeShell (this=0x811a958, name=0x0) at kimeshell.cpp:57
#11 0x08062779 in main (argc=0, argv=0x0) at main.cpp:70
#12 0xa7602eb0 in __libc_start_main () from /lib/tls/i686/cmov/libc.so.6
#13 0x08061051 in _start () at ../sysdeps/i386/elf/start.S:119
Comment 5 Valentin Dietrich 2006-04-15 18:12:43 UTC
I've the same problem and the same debugging result! 
kde 3.5.2; Kernel: 2.6.15.6-kanotix-1 ; Kanotix (CeBit Preview)
this happened after i updated xorg (to v7), but i'm not sure if the problem wasn't there before
Comment 6 GML 2006-04-16 17:08:00 UTC
no, I had xorg 6.9 when kimagemapcreator began to crash.
I've same bug with xorg 7.0.
This bugs appears with kde 3.5.2 update.
Comment 7 Ron Pepper 2006-07-03 01:13:16 UTC
kimagemapeditor is crashing on launch for me too. I'm running Kanotix with 2.6.17 kernel.
Comment 8 Slava 2006-07-16 10:22:24 UTC
In my system (Debian testing/unstable, kernel 2.6.17.5, X.org 7.0, KDE-3.5.3, Debian Package 4:3.5.2-2 (testing/unstable)) kimagemapeditor also crashes right after it has been launched.
Comment 9 Jan Schaefer 2006-07-17 08:48:43 UTC
Could you post the output and the backtrace of KIME when started from the console?
Comment 10 Jan Schaefer 2007-01-08 10:16:37 UTC
Okay, I think I found the reason for the crash, as I could reproduce it now. It comes when a certain font is not installed on the system. I will fix this.
Comment 11 Jan Schaefer 2007-01-08 10:36:42 UTC
SVN commit 621091 by schafer:

Fixed a code line that can crash when the desired font is not installed.
Removed the hard-coded font name Luxi Sans and take the default font 
instead.

BUG:125145


 M  +5 -1      kimagemapeditor.cpp  


--- branches/KDE/3.5/kdewebdev/kimagemapeditor/kimagemapeditor.cpp #621090:621091
@@ -857,8 +857,12 @@
     pix.fill(QColor(74,76,74));
     QPainter p(&pix);
 
-    QFont font = QFontDatabase().font("Luxi Sans","Bold",fontSize);
+    QFont font;
+    font.setFamily("Sans");
+    font.setPixelSize(fontSize);
+    font.setBold(true);
     p.setFont( font );
+    
     p.setRasterOp(Qt::CopyROP);
     p.setPen(QPen(QColor(112,114,112),1));