Fixed a code line that can crash when the desired font is not installed. Removed the hard-coded font name Luxi Sans and take the default font instead.

BUG:125145

svn path=/branches/KDE/3.5/kdewebdev/kimagemapeditor/; revision=621091